--- a/part2/phonebook/package.json
+++ b/part2/phonebook/package.json
@@ -17,7 +17,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "build:ui": "rm -rf build && rm -rf ../../part3/phonebook-backend/build && npm run build && cp -r build ../../part3/phonebook-backend"
   },
   "eslintConfig": {
     "extends": [
@@ -40,5 +41,6 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "json-server": "^0.17.3"
-  }
+  },
+  "proxy": "http://localhost:3001"
 }
