completed upto 3.14 of backend part3

--- a/part3/phonebook-backend/.env
+++ b/part3/phonebook-backend/.env
@@ -1,1 +1,2 @@
 MONGODB_URI="mongodb+srv://hemlal:hemlal@cluster0.nyjc2xc.mongodb.net/connect?retryWrites=true&w=majority"
+MONGODB1_URI="mongodb+srv://dulal:hemlal@cluster0.8l3xvit.mongodb.net/?retryWrites=true&w=majority"
