--- a/part3/phonebook-backend/package.json
+++ b/part3/phonebook-backend/package.json
@@ -16,9 +16,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "mongodb": "^5.7.0",
     "mongoose": "^7.4.2",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.1"
-  },
-  "proxy": "http://localhost:3001"
+  }
 }
