--- a/part4/package.json
+++ b/part4/package.json
@@ -5,7 +5,7 @@
   "main": "writer.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev":"nodemon writer.js"
+    "dev": "node index.js"
   },
   "keywords": [],
   "author": "",
