--- a/part4/package.json
+++ b/part4/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "writer.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --verbose",
     "dev": "node index.js"
   },
   "keywords": [],
@@ -17,6 +17,7 @@
     "mongoose": "^7.4.3"
   },
   "devDependencies": {
+    "jest": "^29.6.2",
     "nodemon": "^3.0.1"
   }
 }
