--- a/part4/package.json
+++ b/part4/package.json
@@ -5,7 +5,7 @@
   "main": "writer.js",
   "scripts": {
     "test": "jest --verbose",
-    "dev": "node index.js"
+    "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
